--- a/app/src/main/res/layout/ravindu_activity_view_bug.xml
+++ b/app/src/main/res/layout/ravindu_activity_view_bug.xml
@@ -150,7 +150,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/colorHome">
+        app:cardBackgroundColor="@color/colorHome"
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
