--- a/app/src/main/res/layout/ravindu_get_in_touch_admin_panel.xml
+++ b/app/src/main/res/layout/ravindu_get_in_touch_admin_panel.xml
@@ -16,6 +16,7 @@
         android:layout_marginRight="10dp"
         app:cardBackgroundColor="#FB8C00"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
         app:contentPadding="20dp">
 
         <LinearLayout
@@ -53,7 +54,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="0"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -86,6 +86,7 @@
         android:layout_marginRight="10dp"
         app:cardBackgroundColor="@color/colorBlue"
         app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
         app:contentPadding="20dp">
 
         <LinearLayout
@@ -123,7 +124,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="0"
                     android:textColor="#000000"
                     android:textSize="18sp" />
             </LinearLayout>
