manuka - FCM added

--- a/app/src/main/res/layout/manuka_cloud_message_dialog.xml
+++ b/app/src/main/res/layout/manuka_cloud_message_dialog.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/_20sdp"
-    app:cardUseCompatPadding="true"
-    android:layout_height="wrap_content">
+    app:cardUseCompatPadding="true">
+
+    <ImageView
+        android:src="@drawable/rlogo"
+        android:layout_margin="@dimen/_4sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:text="x"
             android:paddingStart="@dimen/_10sdp"
+            android:text="x"
             android:textColor="@color/colorBlackText"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold" />
@@ -29,20 +35,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:text="@string/loading"
             android:textColor="@color/colorBlackText"
-            android:textSize="@dimen/_12sdp"
+            android:textSize="@dimen/_18sdp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_120sdp"
             android:layout_alignBottom="@+id/title"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/_10sdp"
-            android:background="@drawable/icon_danger_danger_large" />
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:src="@drawable/spinner_48_inner_holo"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/message"
@@ -51,24 +59,24 @@
             android:layout_gravity="center"
             android:text="@string/loading"
             android:textColor="@color/colorBlackText"
-            android:textStyle="italic"
-            android:textSize="@dimen/_10sdp" />
+            android:textSize="@dimen/_14sdp"
+            android:textStyle="italic" />
 
         <Button
             android:id="@+id/button"
-            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/_8sdp"
-            android:paddingBottom="@dimen/_8sdp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/button_round_fb"
             android:paddingStart="@dimen/_40sdp"
+            android:paddingTop="@dimen/_8sdp"
             android:paddingEnd="@dimen/_40sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:background="@drawable/button_round_black"
-            android:text="@string/living"
+            android:paddingBottom="@dimen/_8sdp"
+            android:text="@string/i_understand"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/_12sdp" />
+            android:textSize="@dimen/_14sdp" />
 
     </LinearLayout>
 
