--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +11,7 @@
     <!-- Manuka -->
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="@dimen/_4sdp"
@@ -23,84 +24,76 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
+                android:layout_height="@dimen/_40sdp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <Button
+                    android:id="@+id/location_picker"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40sdp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/location_picker"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@color/colorWhite"
-                        android:drawableStart="@drawable/ic_baseline_location_on_24"
-                        android:fontFamily="serif"
-                        android:paddingStart="@dimen/_16sdp"
-                        android:paddingEnd="@dimen/_16sdp"
-                        android:text="@string/menu_location"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorBlackText"
-                        android:textSize="@dimen/_14sdp" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/colorWhite"
+                    android:drawableStart="@drawable/ic_baseline_location_on_24"
+                    android:fontFamily="serif"
+                    android:paddingStart="@dimen/_16sdp"
+                    android:paddingEnd="@dimen/_16sdp"
+                    android:text="@string/menu_location"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_14sdp" />
 
 
-                    <TextView
-                        android:layout_width="@dimen/_1sdp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginTop="@dimen/_8sdp"
-                        android:layout_marginBottom="@dimen/_8sdp"
-                        android:background="@color/colorWhiteLite" />
+                <TextView
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:background="@color/colorWhiteLite" />
 
-                    <Button
-                        android:id="@+id/category_picker"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@color/colorWhite"
-                        android:drawableStart="@drawable/ic_baseline_label_24"
-                        android:ellipsize="end"
-                        android:fontFamily="serif"
-                        android:maxLines="1"
-                        android:paddingStart="@dimen/_16sdp"
-                        android:paddingEnd="@dimen/_16sdp"
-                        android:text="@string/menu_category"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorBlackText"
-                        android:textSize="@dimen/_14sdp" />
+                <Button
+                    android:id="@+id/category_picker"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/colorWhite"
+                    android:drawableStart="@drawable/ic_baseline_label_24"
+                    android:ellipsize="end"
+                    android:fontFamily="serif"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/_16sdp"
+                    android:paddingEnd="@dimen/_16sdp"
+                    android:text="@string/menu_category"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_14sdp" />
 
-                    <TextView
-                        android:layout_width="@dimen/_1sdp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginTop="@dimen/_8sdp"
-                        android:layout_marginBottom="@dimen/_8sdp"
-                        android:background="@color/colorWhiteLite" />
+                <TextView
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:background="@color/colorWhiteLite" />
 
-                    <ImageView
-                        android:id="@+id/filters"
-                        android:layout_width="@dimen/_24sdp"
-                        android:layout_height="@dimen/_24sdp"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:background="@drawable/icon_filter_blue_home"
-                        android:contentDescription="@string/image" />
-
-                </LinearLayout>
+                <ImageView
+                    android:id="@+id/filters"
+                    android:layout_width="@dimen/_24sdp"
+                    android:layout_height="@dimen/_24sdp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/icon_filter_blue_home"
+                    android:contentDescription="@string/image" />
 
             </LinearLayout>
 
             <View
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="#75CCCCCC" />
+                android:background="#66CCCCCC" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -114,6 +107,7 @@
                     android:layout_height="@dimen/_20sdp"
                     android:layout_centerVertical="true"
                     android:adjustViewBounds="true"
+                    android:contentDescription="@string/image"
                     android:scaleType="centerInside"
                     android:src="@drawable/icon_door_step_hd" />
 
@@ -122,9 +116,10 @@
                     android:layout_height="@dimen/_20sdp"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/_2sdp"
-                    android:layout_toRightOf="@+id/doorstep"
+                    android:layout_toEndOf="@+id/doorstep"
                     android:adjustViewBounds="true"
                     android:background="@drawable/ic_baseline_info_24_info_grey"
+                    android:contentDescription="@string/image"
                     android:scaleType="centerInside" />
 
                 <Switch
@@ -133,7 +128,7 @@
                     android:layout_height="@dimen/_20sdp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
                     android:checked="false"
                     android:theme="@style/doorstep" />
 
@@ -148,20 +143,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/adMenuRecyclerView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_6sdp" />
+                android:orientation="vertical"
+                android:paddingTop="@dimen/_80sdp">
 
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/adMenuRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_6sdp" />
 
                 <FrameLayout
                     android:id="@+id/frameLayout"
@@ -169,10 +166,10 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone" />
 
-            </androidx.core.widget.NestedScrollView>
+            </LinearLayout>
 
-        </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+</RelativeLayout>
