--- a/app/src/main/res/layout/manuka_ad_menu.xml
+++ b/app/src/main/res/layout/manuka_ad_menu.xml
@@ -1,96 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="@dimen/_6sdp"
+    android:layout_marginBottom="@dimen/_8sdp"
+    android:background="@color/colorWhite">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_6sdp"
-        app:cardUseCompatPadding="true">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/_4sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.santalu.aspectratioimageview.AspectRatioImageView
+                android:id="@+id/adMenuImage"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/spinner_48_inner_holo"
+                app:ari_ratio="1" />
+
+            <TextView
+                android:id="@+id/adMenuBuyNow"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_28sdp"
+                android:layout_below="@+id/adMenuImage"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/_minus28sdp"
+                android:background="@color/colorGreen"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="@string/buy_now"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="bold|italic"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/adMenuTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="start"
+            android:layout_marginStart="@dimen/_6sdp"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="ABCD"
+            android:textColor="#000000"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="bold" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/adMenuPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="start"
+            android:layout_marginStart="@dimen/_6sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="ABCD"
+            android:textColor="@color/colorGreen"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="bold" />
 
-                <com.santalu.aspectratioimageview.AspectRatioImageView
-                    android:id="@+id/adMenuImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/spinner_48_inner_holo"
-                    app:ari_ratio="1"/>
+        <TextView
+            android:id="@+id/adMenuDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_6sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="end"
+            android:text="ABCD"
+            android:textSize="@dimen/_8sdp" />
 
-                <TextView
-                    android:id="@+id/adMenuBuyNow"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_28sdp"
-                    android:layout_below="@+id/adMenuImage"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="@dimen/_minus28sdp"
-                    android:background="@color/colorGreen"
-                    android:fontFamily="sans-serif"
-                    android:gravity="center"
-                    android:text="Buy Now"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/_14sdp"
-                    android:textStyle="bold|italic"
-                    android:visibility="visible" />
+        <ImageView
+            android:id="@+id/dailyBoastWatermark"
+            android:layout_width="@dimen/_16sdp"
+            android:layout_height="@dimen/_16sdp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:src="@drawable/bump_small"
+            android:visibility="visible" />
 
-            </RelativeLayout>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/adMenuTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:layout_marginEnd="@dimen/_6sdp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="ABCD"
-                android:textColor="#000000"
-                android:textSize="@dimen/_12sdp"
-                android:textStyle="bold"></TextView>
+    <ImageView
+        android:id="@+id/urgentWatermark"
+        android:layout_width="@dimen/_60sdp"
+        android:layout_height="@dimen/_60sdp"
+        android:src="@drawable/icon_urgent"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/adMenuPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="start"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="ABCD"
-                android:textColor="@color/colorGreen"
-                android:textSize="@dimen/_12sdp"
-                android:textStyle="bold"></TextView>
-
-            <TextView
-                android:id="@+id/adMenuDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:layout_marginEnd="@dimen/_6sdp"
-                android:layout_marginBottom="@dimen/_4sdp"
-                android:fontFamily="sans-serif-medium"
-                android:text="ABCD"
-                android:textSize="@dimen/_8sdp"></TextView>
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
