--- a/app/src/main/res/drawable/button_round_fb.xml
+++ b/app/src/main/res/drawable/button_round_fb.xml
@@ -10,5 +10,5 @@
     <item android:state_focused="true" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/button_focus" />
     <!--  Pressed
      -->
-    <item android:state_pressed="true" android:drawable="@drawable/button_press" />
+    <item android:state_pressed="true" android:drawable="@drawable/button_focus" />
 </selector>
