manuka - ad promo design updated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="colorGreenDark">#007f63</color>
     <color name="colorError">#FFAE0655</color>
     <color name="colorError2">#DE041E</color>
+    <color name="brownRed">#691f1a</color>
 
     <!--Ravindu Wataketiya -->
 
