--- a/app/src/main/res/drawable/promotion_bundle_border.xml
+++ b/app/src/main/res/drawable/promotion_bundle_border.xml
@@ -4,10 +4,8 @@
     android:layout_height="match_parent"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorWhite" />
-
     <stroke
-        android:width="@dimen/_1sdp"
-        android:color="@color/colorGreyBtn" />
+        android:width="1dp"
+        android:color="#CCCCCCCC" />
 
 </shape>
