--- a/app/src/main/res/layout/manuka_activity_promotion_main.xml
+++ b/app/src/main/res/layout/manuka_activity_promotion_main.xml
@@ -17,10 +17,11 @@
         app:layout_constraintBottom_toTopOf="@+id/continueLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorWhite"
+        android:background="@color/white_with_alpha"
         tools:context=".ui.Promotion.PromotionMain">
 
         <LinearLayout
+            android:id="@+id/promotionsLayout"
             android:paddingTop="@dimen/_16sdp"
             android:paddingBottom="@dimen/_16sdp"
             android:paddingStart="@dimen/_12sdp"
@@ -31,7 +32,7 @@
 
             <TextView
                 android:text="Make your ad stand out!"
-                android:textSize="@dimen/_20sdp"
+                android:textSize="@dimen/_18sdp"
                 android:textStyle="bold"
                 android:textColor="@color/colorBlackText"
                 android:layout_width="match_parent"
@@ -39,21 +40,16 @@
 
             <TextView
                 android:text="Get up to 10x more responses on your ads by applying a promotion"
-                android:textSize="@dimen/_14sdp"
+                android:textSize="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_4sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:text="Select one or more options"
-                android:textSize="@dimen/_14sdp"
+                android:textSize="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_8sdp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <FrameLayout
-                android:id="@+id/promotionsLayout"
-                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
