--- a/app/src/main/res/layout/manuka_fragment_spot_light_ad.xml
+++ b/app/src/main/res/layout/manuka_fragment_spot_light_ad.xml
@@ -36,7 +36,7 @@
                 android:layout_marginStart="@dimen/_4sdp"
                 android:layout_marginEnd="@dimen/_4sdp"
                 android:layout_weight="0"
-                android:background="@drawable/bump_small" />
+                android:background="@drawable/icon_spotlight_promotion" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -58,7 +58,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="start"
-                        android:text="Daily Bump Up"
+                        android:text="Spotlight"
                         android:textColor="@color/colorBlackText"
                         android:textSize="@dimen/_13sdp"
                         android:textStyle="bold" />
@@ -68,7 +68,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="From Rs 500.00"
+                        android:text="From Rs 3,500.00"
                         android:textColor="@color/colorBlackText"
                         android:textSize="@dimen/_11sdp" />
 
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:gravity="start"
-                    android:text="Get a fresh start every day and gain upto 5 times or more views!"
+                    android:text="Boast sales by showing your ad in this premium shot."
                     android:textColor="@color/colorBlackText"
                     android:textSize="@dimen/_12sdp" />
 
@@ -125,7 +125,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Rs 500.00"
+                    android:text="Rs 3,500.00"
                     android:textColor="@color/colorGreenDark"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
@@ -154,7 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Rs 1,000.00"
+                    android:text="Rs 5,000.00"
                     android:textColor="@color/colorGreenDark"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
@@ -183,7 +183,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Rs 1,500.00"
+                    android:text="Rs 7,000.00"
                     android:textColor="@color/colorGreenDark"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
