--- a/app/src/main/res/drawable/button_round_fb.xml
+++ b/app/src/main/res/drawable/button_round_fb.xml
@@ -2,13 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!--  Non focused states
      -->
-    <item android:state_focused="false" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/button_unfocused" />
-    <item android:state_focused="false" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/button_unfocused" />
+    <item android:drawable="@drawable/button_unfocused" android:state_focused="false" android:state_pressed="false" android:state_selected="false" />
+    <item android:drawable="@drawable/button_unfocused" android:state_focused="false" android:state_pressed="false" android:state_selected="true" />
     <!--  Focused states
      -->
-    <item android:state_focused="true" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/button_focus" />
-    <item android:state_focused="true" android:state_selected="true" android:state_pressed="false" android:drawable="@drawable/button_focus" />
+    <item android:drawable="@drawable/button_focus" android:state_focused="true" android:state_pressed="false" android:state_selected="false" />
+    <item android:drawable="@drawable/button_focus" android:state_focused="true" android:state_pressed="false" android:state_selected="true" />
     <!--  Pressed
      -->
-    <item android:state_pressed="true" android:drawable="@drawable/button_focus" />
+    <item android:drawable="@drawable/button_focus" android:state_pressed="true" />
+
+    <item android:drawable="@drawable/button_focus" android:state_activated="false" />
+    <item android:drawable="@drawable/button_unfocused" android:state_activated="true" />
+
 </selector>
