--- a/app/src/main/res/layout/manuka_promotion_activity_payment.xml
+++ b/app/src/main/res/layout/manuka_promotion_activity_payment.xml
@@ -40,13 +40,14 @@
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            android:padding="@dimen/_16sdp"
             android:visibility="visible">
-
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="@dimen/_16sdp"
+                android:paddingTop="@dimen/_20sdp"
+                android:paddingEnd="@dimen/_16sdp"
                 android:text="Selected ad for promotion"
                 android:textColor="@color/colorBlackText"
                 android:textSize="@dimen/_14sdp"
@@ -55,7 +56,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_12sdp"
+                android:layout_margin="@dimen/_14sdp"
                 android:elevation="@dimen/_8sdp"
                 app:cardUseCompatPadding="true">
 
@@ -202,33 +203,17 @@
 
             </androidx.cardview.widget.CardView>
 
-            <LinearLayout
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_24sdp"
-                android:orientation="horizontal">
+                android:layout_height="@dimen/_40sdp"
+                android:background="@color/colorHome" />
 
-                <ImageView
-                    android:layout_width="@dimen/_16sdp"
-                    android:layout_height="@dimen/_16sdp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/ic_baseline_lock_24"
-                    android:contentDescription="@string/orderPhone"
-                    android:textColor="@color/colorBlack"
-                    android:textStyle="bold" />
+            <include layout="@layout/manuka_promotions_payment_user_details" android:id="@+id/paymentSummary"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/_4sdp"
-                    android:fontFamily="serif"
-                    android:text="@string/orderItemPaymentInfo"
-                    android:textAllCaps="false"
-                    android:textSize="@dimen/_10sdp"
-                    android:textStyle="italic" />
-
-            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:background="@color/colorHome" />
 
         </LinearLayout>
 
