--- a/app/src/main/res/drawable/promotion_bundle_border_active.xml
+++ b/app/src/main/res/drawable/promotion_bundle_border_active.xml
@@ -2,12 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:thickness="@dimen/_1sdp"
     android:shape="rectangle">
 
     <solid android:color="@color/colorHome"/>
 
     <stroke
         android:width="1dp"
-        android:color="#74CCCCCC" />
+        android:color="#CCCCCC" />
 
 </shape>
