--- a/app/src/main/res/drawable/promotion_bundle_border_main_active.xml
+++ b/app/src/main/res/drawable/promotion_bundle_border_main_active.xml
@@ -5,7 +5,7 @@
     android:thickness="@dimen/_1sdp"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorWhite" />
+    <solid android:color="@color/colorBlueLitePromo" />
 
     <stroke
         android:width="1dp"
