--- a/app/src/main/res/layout/manuka_activity_promotion_main.xml
+++ b/app/src/main/res/layout/manuka_activity_promotion_main.xml
@@ -4,85 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorHome"
     android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+
     <androidx.core.widget.NestedScrollView
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/continueLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/white_with_alpha"
+        app:layout_constraintBottom_toTopOf="@+id/continueLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:context=".ui.Promotion.PromotionMain">
 
         <LinearLayout
-            android:paddingTop="@dimen/_16sdp"
-            android:paddingBottom="@dimen/_16sdp"
-            android:paddingStart="@dimen/_12sdp"
-            android:paddingEnd="@dimen/_12sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorHome"
             android:orientation="vertical">
 
-            <TextView
-                android:text="Make your ad stand out!"
-                android:textSize="@dimen/_18sdp"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlackText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:text="Get up to 10x more responses on your ads by applying a promotion"
-                android:textSize="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:text="Select one or more options"
-                android:textSize="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+            <include
+                android:id="@+id/adReview"
+                layout="@layout/manuka_ad_under_review" />
 
             <LinearLayout
-                android:orientation="vertical"
-                android:id="@+id/promotionsLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/_12sdp"
+                android:paddingTop="@dimen/_16sdp"
+                android:paddingEnd="@dimen/_12sdp"
+                android:paddingBottom="@dimen/_16sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Make your ad stand out!"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_18sdp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_4sdp"
+                    android:text="Get up to 10x more responses on your ads by applying a promotion"
+                    android:textSize="@dimen/_12sdp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:text="Select one or more options"
+                    android:textSize="@dimen/_12sdp" />
+
+                <LinearLayout
+                    android:id="@+id/promotionsLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
     <LinearLayout
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/continueLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         android:elevation="@dimen/_8sdp"
         android:padding="@dimen/_12sdp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/continueBTN"
-            android:textColor="@color/colorWhite"
-            android:textAllCaps="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/button_round_fb"
             android:padding="@dimen/_8sdp"
-            android:textSize="@dimen/_16sdp"
             android:text="@string/continueBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/_16sdp" />
 
     </LinearLayout>
 
