--- a/app/src/main/res/layout/manuka_fragment_urgent_ads.xml
+++ b/app/src/main/res/layout/manuka_fragment_urgent_ads.xml
@@ -15,6 +15,7 @@
         tools:context=".ui.Promotion.DailyBump">
 
         <LinearLayout
+            android:id="@+id/layoutMain"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/promotion_bundle_border"
