--- a/app/src/main/res/layout/manuka_payment_top_ad.xml
+++ b/app/src/main/res/layout/manuka_payment_top_ad.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
+        android:gravity="end"
         android:text="@string/loading"
         android:textSize="@dimen/_12sdp"
         android:textStyle="italic" />
