--- a/app/src/main/res/layout/manuka_promotion_activity_payment.xml
+++ b/app/src/main/res/layout/manuka_promotion_activity_payment.xml
@@ -53,162 +53,19 @@
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold" />
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
+                android:id="@+id/promoFrame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_14sdp"
-                android:elevation="@dimen/_8sdp"
-                app:cardUseCompatPadding="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_12sdp">
-
-                        <ImageView
-                            android:id="@+id/adImage"
-                            android:layout_width="@dimen/_80sdp"
-                            android:layout_height="@dimen/_60sdp"
-                            android:layout_gravity="center_vertical"
-                            android:src="@drawable/spinner_48_inner_holo" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:orientation="vertical"
-                            android:paddingStart="@dimen/_8sdp">
-
-                            <TextView
-                                android:id="@+id/title"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:maxLines="1"
-                                android:text="@string/loading"
-                                android:textColor="@color/colorBlackText"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/category"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:maxLines="1"
-                                android:text="@string/loading"
-                                android:textColor="@color/colorBlackText"
-                                android:textSize="@dimen/_12sdp" />
-
-                            <TextView
-                                android:id="@+id/adPrice"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:maxLines="1"
-                                android:text="@string/loading"
-                                android:textColor="@color/colorGreenDark"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_1sdp"
-                        android:background="@color/colorWhiteLite" />
-
-                    <include
-                        android:id="@+id/bundle_layout"
-                        layout="@layout/manuka_payment_bundle" />
-
-                    <include
-                        android:id="@+id/daily_bump_layout"
-                        layout="@layout/manuka_payment_daily_boast" />
-
-
-                    <include
-                        android:id="@+id/top_ad_layout"
-                        layout="@layout/manuka_payment_top_ad" />
-
-                    <include
-                        android:id="@+id/urgent_layout"
-                        layout="@layout/manuka_payment_urgent" />
-
-                    <include
-                        android:id="@+id/spotlight_layout"
-                        layout="@layout/manuka_payment_spotlight" />
-
-                    <TextView
-                        android:id="@+id/invalid_promos"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_info_24_red"
-                        android:drawablePadding="@dimen/_8sdp"
-                        android:gravity="start"
-                        android:paddingStart="@dimen/_12sdp"
-                        android:paddingTop="@dimen/_16sdp"
-                        android:paddingEnd="@dimen/_12sdp"
-                        android:paddingBottom="@dimen/_16sdp"
-                        android:text="Selected promotion/promotions seems to be invalid or may not be available at the moment."
-                        android:textSize="@dimen/_12sdp" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_1sdp"
-                        android:background="@color/colorWhiteLite" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#66CCCCCC"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_12sdp">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight="2"
-                            android:paddingStart="@dimen/_12sdp"
-                            android:paddingEnd="@dimen/_12sdp"
-                            android:text="@string/orderItemPaymentTotal"
-                            android:textColor="@color/colorBlackTextLite"
-                            android:textSize="@dimen/_12sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/total"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginEnd="@dimen/_8sdp"
-                            android:layout_weight="1"
-                            android:gravity="end"
-                            android:text="@string/loading"
-                            android:textSize="@dimen/_12sdp"
-                            android:textStyle="italic" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
+                android:layout_height="wrap_content" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:background="@color/colorHome" />
 
-            <include layout="@layout/manuka_promotions_payment_user_details" android:id="@+id/paymentSummary"/>
+            <include
+                android:id="@+id/paymentSummary"
+                layout="@layout/manuka_promotions_payment_user_details" />
 
             <View
                 android:layout_width="match_parent"
