--- a/app/src/main/res/layout/manuka_activity_promotion_history.xml
+++ b/app/src/main/res/layout/manuka_activity_promotion_history.xml
@@ -1,9 +1,279 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorHome"
+    android:orientation="vertical"
     tools:context=".ui.Promotion.PromotionHistory">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/main_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/_8sdp"
+                android:paddingBottom="@dimen/_24sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:paddingStart="@dimen/_16sdp"
+                    android:paddingEnd="@dimen/_16sdp"
+                    android:text="Promotions History of the selected ad"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_14sdp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:paddingStart="@dimen/_16sdp"
+                    android:paddingEnd="@dimen/_16sdp"
+                    android:text="Note that this will not show all the promotions applied and this will only display the currently applied promotions on this ad and the promotions that are pending to be reviewed."
+                    android:textSize="@dimen/_12sdp" />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_14sdp"
+                    android:elevation="@dimen/_8sdp"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_1sdp"
+                            android:background="@color/colorWhiteLite" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_12sdp">
+
+                            <ImageView
+                                android:id="@+id/adImage"
+                                android:layout_width="@dimen/_80sdp"
+                                android:layout_height="@dimen/_60sdp"
+                                android:layout_gravity="center_vertical"
+                                android:src="@drawable/spinner_48_inner_holo" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:orientation="vertical"
+                                android:paddingStart="@dimen/_8sdp">
+
+                                <TextView
+                                    android:id="@+id/title"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="@string/loading"
+                                    android:textColor="@color/colorBlackText"
+                                    android:textSize="@dimen/_12sdp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:id="@+id/category"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="@string/loading"
+                                    android:textColor="@color/colorBlackText"
+                                    android:textSize="@dimen/_12sdp" />
+
+                                <TextView
+                                    android:id="@+id/adPrice"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="@string/loading"
+                                    android:textColor="@color/colorGreenDark"
+                                    android:textSize="@dimen/_12sdp"
+                                    android:textStyle="bold" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_1sdp"
+                            android:background="@color/colorWhiteLite" />
+
+                        <LinearLayout
+                            android:id="@+id/appliedPromos"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/ic_baseline_info_24_blue_promo"
+                                android:drawablePadding="@dimen/_8sdp"
+                                android:gravity="center_vertical"
+                                android:paddingStart="@dimen/_12sdp"
+                                android:paddingTop="@dimen/_16sdp"
+                                android:paddingEnd="@dimen/_12sdp"
+                                android:text="Currently Applied Promos"
+                                android:textColor="@color/colorBlackText"
+                                android:textSize="@dimen/_12sdp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/no_applied_promos"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/ic_baseline_info_20_red"
+                                android:drawablePadding="@dimen/_8sdp"
+                                android:gravity="center_vertical"
+                                android:paddingStart="@dimen/_12sdp"
+                                android:paddingTop="@dimen/_16sdp"
+                                android:paddingEnd="@dimen/_12sdp"
+                                android:paddingBottom="@dimen/_16sdp"
+                                android:text="There are no promotions currently applied for the above advertisement."
+                                android:textSize="@dimen/_12sdp" />
+
+                            <ProgressBar
+                                android:id="@+id/progressAppliedPromos"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_40sdp"
+                                android:layout_marginTop="@dimen/_8sdp"
+                                android:layout_marginBottom="@dimen/_8sdp"
+                                android:indeterminate="true"
+                                android:indeterminateDrawable="@drawable/progress_grey" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_1sdp"
+                            android:background="@color/colorWhiteLite" />
+
+                        <LinearLayout
+                            android:id="@+id/pendingPromos"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/ic_baseline_info_24_blue_promo"
+                                android:drawablePadding="@dimen/_8sdp"
+                                android:gravity="center_vertical"
+                                android:paddingStart="@dimen/_12sdp"
+                                android:paddingTop="@dimen/_16sdp"
+                                android:paddingEnd="@dimen/_12sdp"
+                                android:text="Currently Pending Promos"
+                                android:textColor="@color/colorBlackText"
+                                android:textSize="@dimen/_12sdp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/no_pending_promos"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/ic_baseline_info_20_red"
+                                android:drawablePadding="@dimen/_8sdp"
+                                android:gravity="center_vertical"
+                                android:paddingStart="@dimen/_12sdp"
+                                android:paddingTop="@dimen/_16sdp"
+                                android:paddingEnd="@dimen/_12sdp"
+                                android:paddingBottom="@dimen/_16sdp"
+                                android:text="There are no pending promotions added for the above advertisement."
+                                android:textSize="@dimen/_12sdp" />
+
+                            <ProgressBar
+                                android:id="@+id/progressPendingPromos"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_40sdp"
+                                android:layout_marginTop="@dimen/_8sdp"
+                                android:layout_marginBottom="@dimen/_8sdp"
+                                android:indeterminate="true"
+                                android:indeterminateDrawable="@drawable/progress_grey" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_14sdp"
+                    android:fontFamily="serif"
+                    android:text="Need help or something is not right?"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/_12sdp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="@dimen/_4sdp"
+                    android:fontFamily="serif"
+                    android:text="@string/orderCallus"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorBlackText"
+                    android:textSize="@dimen/_20sdp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:drawableStart="@drawable/ic_baseline_call_24"
+                    android:drawablePadding="@dimen/_4sdp"
+                    android:fontFamily="serif"
+                    android:text="@string/company_phone"
+                    android:textColor="@color/mainUiColour"
+                    android:textSize="@dimen/_18sdp" />
+
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progressBarMain"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_60sdp"
+                android:layout_marginTop="@dimen/_40sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:indeterminate="true"
+                android:indeterminateDrawable="@drawable/progress_grey" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</LinearLayout>
